# openeuler-sysSentry

./: Makefile
config/: collector.conf
config/env/: soc_ring_sentry.env
config/plugins/: ai_block_io.ini  avg_block_io.ini  bmc_ras_sentry.ini
config/service/: sysSentry.service  sysSentry.socket  xalarmd.service  xalarmd.socket
config/task_scripts/: sentry_msg_monitor.sh
config/tasks/: ai_block_io.mod  bmc_ras_sentry.mod  hbm_online_repair.mod  rasdaemon.mod  sentry_msg_monitor.mod  sentry_urma_comm.mod  soc_ring_sentry.mod
selftest/: test.sh
selftest/libs/: common.sh
selftest/test/: test_bmc_ras_sentry_alarm_info_on_vm_test.sh  test_bmc_ras_sentry_invalid_param.sh  test_bmc_ras_sentry_valid_param_update_cycle.sh  test_sentry_msg_monitor_status.sh  test_sentryctl_end_exception.sh  test_sentryctl_exception.sh  test_sentryctl_heartbeat_exception.sh  test_sentryctl_interval_exception.sh  test_sentryctl_modname_long_length_exception.sh  test_sentryctl_modname_valid.sh  test_sentryctl_normal.sh  test_sentryctl_reload.sh  test_sentryctl_start_exception.sh  test_sentryctl_type_exception.sh  test_sentryctl_type_oneshot.sh  test_sentryctl_type_period.sh  test_xalarm_read_config_exception.sh  test_xalarm_register_and_unregister_exception.sh  (+3 more)
src/libsentry/c/log/: CMakeLists.txt  log_utils.c  log_utils.h
src/sentryPlugins/bmc_ras_sentry/: CMakeLists.txt  build.sh
src/sentryPlugins/bmc_ras_sentry/include/: cbmcrassentry.h  common.h  configure.h  logger.h
src/sentryPlugins/bmc_ras_sentry/src/: cbmcrassentry.cpp  common.cpp  logger.cpp  main.cpp
(+80 files in other folders)
